# GLaDOS

./: .gitignore  MIGRATION.md  PLAYBOOK.md  README.md  glados.yaml.example  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: v2-selftest.yml  version-check.yml
ci/: glados-check.github-actions.yml  glados-check.gitlab-ci.yml
compiled/claude-plugin/: address-review.md  adopt-codebase.md  brunch.md  build-feature.md  fix-bug.md  implement-feature.md  intent.md  plan-feature.md  retrospect.md  review-codebase.md  review-mr.md  run-epic.md  spec-feature.md  steward.md  verify-feature.md
docs/: README.md  SETUP_GUIDE.md  V2_STRATEGY.md  concepts.md  modules.md  overlays.md  personas.md  src.md  workflows.md
docs/examples/: first-feature.md  fix-a-bug.md  weekly-ceremonies.md
docs/getting-started/: README.md  claude-code.md  claude-plugin.md  direct.md  gemini-cli.md  google-ai-studio.md  google-antigravity.md
docs/guides/: github.md  gitlab.md  lifecycle.md  linear.md  sda.md  sinks.md  wheatley.md
docs/standards/: sda-profile-glados-v1.md  sda-profile-glados-v2.md  sda-standard-v1.md
hooks/: README.md  agy-hooks.json  claude-stop-hook.py  gemini-afteragent-guard.py
plugins/claude-code/: personas  templates  workflows
skills/address-review/: SKILL.md
skills/adopt-codebase/: SKILL.md
skills/autonomous-loop/: SKILL.md
skills/brunch/: SKILL.md
skills/build-feature/: SKILL.md
skills/consolidate/: SKILL.md
skills/establish-standards/: SKILL.md
skills/fix-bug/: SKILL.md
src/: README.md
src/models/: plan.py  (+4 more)
tests/: run_tests.py
(+140 files in other folders)
